--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "ENENLeaner Dictionary",
   "description": "English-English Learner dictionary",
   "version": "1.0.0",
+
   "icons": {
     "128": "icon_128.png"
   },
@@ -10,5 +11,11 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "permissions": ["activeTab"]
+  "content_scripts": [{
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["contentscript.js"]
+  }],
+  "permissions": ["activeTab"],
+  "web_accessible_resources": ["script.js"]
+  
 }
